# embedding-gemma-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
src/: embedder.rs  lib.rs  reranker.rs
