[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "embedding-gemma-rs"
version = "0.1.0"
description = "Fast text embeddings using EmbeddingGemma ONNX model in Rust"
requires-python = ">=3.8"

[tool.maturin]
features = ["python"]
module-name = "embedding_gemma_rs"
